[package]
name = "matechain-brama"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5"
sha2 = "0.10"
solana-client = "1.18"
solana-sdk = "1.18"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
flate2 = "1.0"
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking", "multipart"] }
rand = "0.8"

# Panel WebUI
tiny_http = "0.12"
dotenvy = "0.15.7"
